MCA Dev/src/objects/FO_Sales_Summary__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for the sales summary functionality</description>
    <fields>
        <fullName>Custom_Bank_Statement_Fieldset_API_Name__c</fullName>
        <label>Custom Bank Statement Fieldset API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Merchant_Statement_Fieldset_API_N__c</fullName>
        <label>Custom Merchant Statement Fieldset API N</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Grid_Bank_Statement_Fieldset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Grid Bank Statement Fieldset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Grid_Merchant_Statement_Fieldse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Grid Merchant Statement Fieldse</label>
        <type>Checkbox</type>
    </fields>
    <label>FO Sales Summary</label>
</CustomObject>